added messages view

--- a/app/views/freelancers/show.html.erb
+++ b/app/views/freelancers/show.html.erb
@@ -36,6 +36,11 @@
 <button type="button" class="btn btn-success col-3 justify-content-start" data-toggle="modal" data-target="#travelModal">
   Set Travel Options
 </button>
+
+<button type="button" class="btn btn-success col-3 justify-content-center"><a href='/conversations'>
+  Messages</a>
+</button>
+
 <button type="button" class="btn btn-success col-3 justify-content-end"> <%= link_to 'Edit', edit_freelancer_path(@freelancer) %></button>
 </div>
 </div>
