--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,9 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" id="navtop">
   <div id="logo-name"
-      <a class="navbar-brand mb-4" href="#"><img src="/assets/logo.png" id="logo"></img></a>
+      <a class="navbar-brand mb-4" href="#"><img src="https://c1.staticflickr.com/1/898/42297119062_ccb373a678_o.png" id="logo"></img></a>
       
  </div>
-  <img src = "/assets/companymotto.png" id="companyname"></img>
+  <img src = "https://c2.staticflickr.com/2/1741/42297119132_a3d05ea391_o.png" id="companyname"></img>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
