--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,9 @@
 
 <div class="container justify-content-center">
     <h1 class="header">Find a photographer in your dream destination</h1>
-  <div class="row col-12-sm text-center justify-content-center card-deck" style="margin-bottom: 5rem;">
+  <div class="row col-12-sm text-center justify-content-center" style="margin-bottom: 5rem;">
     <% @popular_places.keys.each do |destination| %>
-      <div class="card" style="width: 21rem;">
+      <div class="card">
         <img class="card-img-top" src="<%= Freelancer.where("location = '#{destination}'").first.picture %>" alt="Card image cap">
         <div class="card-body">
           
